<resources>
    <string name="app_name">Shop!</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="register">회원가입</string>
    <string name="register_info">환영합니다! 아래 정보들을 기입해주세요.</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="pw_chk">번호 확인</string>
    <string name="gender">성별</string>
    <string name="gender_male">남</string>
    <string name="gender_female">여</string>
    <string name="years">연령</string>
    <string name="okay">확인</string>
    <string name="cancel">취소</string>
    <string name="my_info">회원정보</string>
    <string name="sir">님</string>
    <string name="shop_home">쇼핑 홈</string>
    <string name="cart">장바구니</string>
</resources>