<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginfrom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/idEt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittxt"
            android:textCursorDrawable="@drawable/edittxt_cursor"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pwEt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittxt"
            android:textCursorDrawable="@drawable/edittxt_cursor"
            android:imeOptions="actionDone"
            android:ems="10"
            android:hint="@string/pw"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:onClick="onLogin"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:onClick="onRegister"
                android:text="@string/register"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>